Boutique Visualisation For Picture

--- a/server.cfg
+++ b/server.cfg
@@ -12,14 +12,14 @@ sets sv_projectName ""
 sets sv_projectDesc ""
 sets locale "root-AQ"
 sets tags "default, esx"
-rcon_password "monptitlou"
+rcon_password ""
 sv_scriptHookAllowed 0
 sv_tebexSecret c092fb750b16bf8066c0144fd62785e08f7c620a
 
 load_server_icon 'logo.png'
 
 set onesync legacy
-set mysql_connection_string "mysql://admin:MbxSqDNGdUTG2nubzqFRNbA0jiOW8Hkl@localhost:3306/almav2?waitForConnections=true&charset=utf8mb4"
+set mysql_connection_string "mysql://root:astonedev@localhost:3306/almav2?waitForConnections=true&charset=utf8mb4"
 
 ## Add system admins
 add_ace group.admin command allow # allow all commands
