--- a/server.cfg
+++ b/server.cfg
@@ -5,7 +5,7 @@ endpoint_add_udp "0.0.0.0:30120"
 
 sv_hostname "Alma V2 - DEV"
 set steam_webApiKey "F9C3C2DD1DD191D163DEC6CCA1CF0552"
-sv_licenseKey cfxk_1lzJIecIDCTkMePSySRzP_gL85B
+sv_licenseKey licensekey
 sv_maxclients 3   # Allow access to features usually locked behind a FiveM patreon key
 
 sets sv_projectName ""
@@ -14,12 +14,12 @@ sets locale "root-AQ"
 sets tags "default, esx"
 rcon_password ""
 sv_scriptHookAllowed 0
-sv_tebexSecret c092fb750b16bf8066c0144fd62785e08f7c620a
+sv_tebexSecret tebexsecret
 
 load_server_icon 'logo.png'
 
 set onesync legacy
-set mysql_connection_string "mysql://root:astonedev@localhost:3306/almav2?waitForConnections=true&charset=utf8mb4"
+set mysql_connection_string "mysql://root:pass@localhost:3306/almav2?waitForConnections=true&charset=utf8mb4"
 
 ## Add system admins
 add_ace group.admin command allow # allow all commands
